# tauri-plugin-graphql

./: Cargo.toml  build.rs  package.json  pnpm-lock.yaml
examples/preact-app/: package.json
examples/preact-app/src-tauri/: Cargo.toml  tauri.conf.json
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: lib.rs
