[package]
name = "tauri-plugin-graphql"
version = "3.1.1"
authors = [ "Jonas Kruckenberg", "Davis Riedel" ]
description = "A plugin for Tauri that enables type-safe IPC through GraphQL."
edition = "2021"
exclude = [ "/webview-dist", "/webview-src", "node_modules" ]
license = "MIT"
repository = "https://github.com/JonasKruckenberg/tauri-plugin-graphql"
categories = [ "gui", "web-programming" ]
keywords = [ "tauri-plugin", "graphql" ]
links = "tauri-plugin-graphql"

[package.metadata.docs.rs]
features = [ "graphiql" ]

[dependencies]
serde = { version = "^1.0.188", features = [ "derive" ] }
serde_json = "^1.0.107"
tauri = "^2.0.0-beta.12"
async-graphql = "^7.0.3"
warp = { version = "^0.3.6", optional = true }
async-graphql-warp = { version = "^7.0.3", optional = true }
http = { version = "^1.1.0", optional = true }

[features]
graphiql = [ "dep:http", "dep:warp", "dep:async-graphql-warp" ]
log = [ "async-graphql/log" ]
tracing = [ "async-graphql/tracing" ]
opentelemetry = [ "async-graphql/opentelemetry" ]
bson = [ "async-graphql/bson" ]
chrono = [ "async-graphql/chrono" ]
chrono-tz = [ "async-graphql/chrono-tz" ]
url = [ "async-graphql/url" ]
uuid = [ "async-graphql/uuid" ]
string_number = [ "async-graphql/string_number" ]
dataloader = [ "async-graphql/dataloader" ]
secrecy = [ "async-graphql/secrecy" ]
decimal = [ "async-graphql/decimal" ]
bigdecimal = [ "async-graphql/bigdecimal" ]
cbor = [ "async-graphql/cbor" ]
smol_str = [ "async-graphql/smol_str" ]
hashbrown = [ "async-graphql/hashbrown" ]
time = [ "async-graphql/time" ]
tokio-sync = [ "async-graphql/tokio-sync" ]
fast_chemail = [ "async-graphql/fast_chemail" ]

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.10", features = [ "build" ] }

[workspace]
members = [ "examples/*/src-tauri" ]
